Tiny fixes